# python-cookiecutter

./: .gitignore  cookiecutter.json
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.in
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: config.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/utils/: config.py  logging.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: config.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/utils/: config.py
